--- a/package.json
+++ b/package.json
@@ -1,64 +1,49 @@
 {
   "name": "Webpack-React-Redux-Start-Base",
   "version": "0.1.0",
-  "description": "Webpack, React, Redux, Babel, Jest, SCSS Start Base",
+  "description": "Webpack, React, Redux, Babel, SCSS Start Base",
   "scripts": {
     "start": "clear && webpack-dev-server",
     "clean": "rimraf build",
-    "lint": "eslint src || true",
-    "test": "clear && jest ./tests --setupTestFrameworkScriptFile=raf/polyfill",
-    "dev": "webpack-dashboard -t 'Webpack Dashboard' -- webpack-dev-server",
-    "build": "npm run clean && webpack --config webpack.production.config.js --progress --profile --colors"
+    "build": "npm run clean && webpack --config webpack.prod.config.js --progress --profile --colors"
   },
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com:/falsy/Webpac-React-Redux-Start-Base.git"
   },
   "author": "falsy",
+  "license": "WTFPL",
   "devDependencies": {
-    "ajv": "^6.1.1",
-    "ajv-keywords": "^3.1.0",
-    "autoprefixer": "^7.2.1",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.0.3",
-    "babel-jest": "^21.2.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.1",
+    "ajv": "^6.5.1",
+    "ajv-keywords": "^3.2.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "css-loader": "^0.28.7",
-    "dotenv-webpack": "^1.5.4",
-    "enzyme": "^3.2.0",
-    "enzyme-adapter-react-16": "^1.1.0",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^15.1.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.5.1",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^0.11.2",
-    "html-webpack-plugin": "^2.30.1",
-    "jest": "^21.2.1",
-    "node-sass": "^4.7.2",
-    "open-browser-webpack-plugin": "0.0.5",
-    "postcss-loader": "^2.0.9",
+    "css-loader": "^0.28.11",
+    "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.0",
+    "node-sass": "^4.9.0",
+    "postcss-loader": "^2.1.5",
     "rimraf": "^2.6.2",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.18.2",
-    "url-loader": "^0.5.9",
-    "webpack": "^3.9.1",
-    "webpack-dashboard": "^0.4.0",
-    "webpack-dev-server": "^2.9.5"
+    "sass-loader": "^7.0.3",
+    "style-loader": "^0.21.0",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.12.0",
+    "webpack-cli": "^3.0.6",
+    "webpack-dashboard": "^2.0.0",
+    "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
-    "classnames": "^2.2.5",
-    "react": "^16.1.0",
-    "react-addons-update": "^15.6.2",
-    "react-dom": "^16.1.0",
-    "react-hot-loader": "^3.1.2",
-    "react-redux": "^5.0.6",
-    "react-router-dom": "^4.2.2",
-    "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "dependencies": "0.0.1",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-hot-loader": "^4.3.2",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0"
   }
 }
